--- a/Radiation/IntroRad.tex
+++ b/Radiation/IntroRad.tex
@@ -1,7 +1,7 @@
 \subsection{Cosmic Radiation}
 \label{subsec:RadiationBackground}
 
-Understanding the biological effect of radiation on humans is cruicial for successful space flight.
+Understanding the biological effect of radiation on humans is crucial for successful space flight.
 By observing the environment in which astronauts reside, information regarding the conditions which induce the biological changes can be gathered.
 Among this information is dosage of various particles.
 In the upper atmosphere, primary particles, which consist largely of protons (p\textsuperscript{+}) and ionized atomic nuclei \cite{Frank}, collide with the nuclei of air molecules and can induce air showers.
