--- a/Radiation/DesignRad.tex
+++ b/Radiation/DesignRad.tex
@@ -90,7 +90,9 @@ The fill factor gives information on the "squareness" of the IV curve and is def
 \end{equation}
 and it is optimal to maximize the fill factor. \cite{OPV_operation}
 
-Before flight, every cell will be characterized with IV curves using AMG 0 simulated sun light to generate a characteristic profile, as expected in the space environment, for the each new cell, and microscopy will be preformed to understand the topology and interfacial details of the new cells. Currently our plan is to have one of each cell type remaining on ground as a control, and we will have each panel onboard the payload wired to an arduino unit where IV curves will be recorded during flight, with a characteristic profile generated every \SI{30}{\second}. This data will be stored on the arduino with backup stored to a raspberry pi. On board our payload we will be measuring the tempreature and pressure of the environment to deteremaine any effects on the preformance due to temperature and pressure changes. Finally after recovery, the IV data will be extracted from the arduino/raspberry pi and plotted, and each cell will be re characterized and once again viewed under the microscope to look for any physical defects. 
+Before flight, every cell will be characterized with IV curves using AMG 0 simulated sun light to generate a characteristic profile, as expected in the space environment, for the each new cell, and microscopy will be preformed to understand the topology and interfacial details of the new cells. Currently our plan is to have one of each cell type remaining on ground as a control, and we will have each panel onboard the payload wired to an arduino unit where IV curves will be recorded during flight, with a characteristic profile generated every \SI{30}{\second}. This data will be stored on the arduino with backup stored to a raspberry pi. On board our payload we will be measuring the tempreature and pressure of the environment to deteremaine any effects on the preformance due to temperature and pressure changes. Finally after recovery, the IV data will be extracted from the arduino/raspberry pi and plotted, and each cell will be re characterized and once again viewed under the microscope to look for any physical defects.
+
+For the microscopy, we will use both electron and atomic force microscopy, where with transmission electron microscopy (TEM) we can use electron energy loss specography(EELS) 
     
-With the HASP mission, we are going to compare fabricated organic polymer and perovskite solar cells against purchased prefabricated organic solar cells. Each of these cells will be analyzed before, during, and after exposure to the stratosphere. In analyzing our cells, we will measure the open circuit voltage, short circuit current, and maiximum power point, then fill factor will be determined along with efficieny.
+With the HASP mission, we are going to compare fabricated organic polymer and perovskite solar cells against purchased prefabricated organic solar cells. Each of these cells will be analyzed before, during, and after exposure to the stratosphere. In analyzing our cells, we will measure the open circuit voltage, short circuit current, and maiximum power point, then fill factor will be determined along with efficieny. We are interested in investigating novel active layer materials for both polymer:fullerene blends and perovskite structures, along with different substrate, transport, and conducting layers, thus our exact methodology for fabrication is yet to be determined. 
 In conjunction with our MiniPIX detector, we will be analyzing the effect that cosmic ray bombardment has on our solar cells. By analyzing the times at which cosmic rays are recorded, we can look at our IV data and determine if there was any effect on the cells preformance. Additionally, we will watch for problems which arise due to UV-A, B, and C rays with photodiodes. These photodiodes will serve the additional purpose of monitoring the solar power spectrum that our cells are exposed to.
