--- a/Bib.tex
+++ b/Bib.tex
@@ -72,7 +72,10 @@ DOI: 10.1016/j.solmat.2018.03.024
 Sheila Bailey and Ryne Raffaelle, Space Solar Cells and Arrays
 
 \bibitem{nextgen_TCO}
-Kuan Sun, Yijie Xia, and Jianyong Ouyang, Next-Generation transparent electrode materials for organic solar cells
+Kuan Sun, Yijie Xia, and Jianyong Ouyang, Next-Generation transparent electrode materials for organic solar cells, (2015) Organic Solar Cells, New York: CRC press
+
+\bibitem{nanophase}
+Chen et al., Nanophase Seperation in Organic Solar Cells, (2015) Organic Solar Cells, New York: CRC press
 
 
 %\bibitem{uv_irradiance}
