Reworded the objectives for OPV

--- a/Sections/Introduction.tex
+++ b/Sections/Introduction.tex
@@ -17,7 +17,7 @@ This allows us to study the particle cascades induced by the materials of the mo
 The payload will also contain a second, unscintillated MiniPIX that will reside outside of the ISS module, recording the outside radiation exposure.
 This second MiniPIX will act as a control for the ISS module, but also allows us to study the environment that extremophiles are exposed to.
 In addition to the MiniPIX, we will test the performance of organic photovoltaic cells in stratospheric conditions.
-Organic photovoltaic cells have promising applications for space-based missions due to their inexpensive, lightweight, and durable nature relative to their non-organic counterparts.
+Organic photovoltaic cells have promising applications for space-based missions due to their inexpensive, lightweight, and flexible nature relative to their non-organic counterparts.
 In tandem to the radiation study, we will collect samples of the microbial life through the use of a passive collection system.
 This system will consist of a T-shaped arm covered with filters that will only be exposed to the outside while at float altitude.
 We will then bring the uncontaminated, collected samples down to the surface for analysis.
@@ -28,7 +28,7 @@ We will then bring the uncontaminated, collected samples down to the surface for
 \begin{enumerate}
 \item Capture microorganisms in the upper atmosphere at altitudes of approximately \SIrange{30}{41}{\kilo\meter} using a method not previously used by the UH HASP team. 
 \item Study the cosmic and terrestrial radiation that extremophiles and astronauts are exposed to.
-\item Observe the influence of intense radiation on the structure and performance of organic photovoltaic cells.
+\item Observe the preformance of organic solar cells in a near space environment
 \end{enumerate}
 
 \noindent \textbf {Secondary Scientific Objectives:}
@@ -36,7 +36,7 @@ We will then bring the uncontaminated, collected samples down to the surface for
 \item Testing the newly developed astrobiology hardware in flight and establish a more reliable method for collecting microbes in extreme environments at high-altitude.
 \item Implement a redundant storage system for all data recorded.
 \item Establish a methodology which allows two or more MiniPIX devices to be used in conjunction.
-\item Study and test the performance of organic photovoltaic solar cells in the intense radiation environment.
+\item Study and test the effect of different fabrication methods of organic photovoltaic solar cells for use in a highly irradiated environment.
 \end{enumerate}
 
 \noindent \textbf {Engineering Objectives:}
@@ -45,6 +45,7 @@ We will then bring the uncontaminated, collected samples down to the surface for
 \item Construct a structure resembling an ISS module as accurately as possible.
 \item Use a scintillator to detect thermal neutrons using a MiniPIX.
 \item Analyze MiniPIX data in real time and downlink relevant information.
+\item Develop novel active layers for organic solar cells which can withstand the strataspheric environment
 %\item Test an improved enclosure against impacts and harsh environments.
 \end{enumerate}
 
