--- a/Radiation/DesignRad.tex
+++ b/Radiation/DesignRad.tex
@@ -80,9 +80,9 @@ By covering half of the sensor, we can compare the uncovered half with the data 
 \subsubsection{Organic Photovoltaic Cells}    
 We will be using four different types of solar cells with a total of 12 arrays on board our payload. There will be one type of cell on each of three sides of the payload, leaving one face free for any unique cells we may develop during our research. Half of our panels will be prefabricated and purcahsed from a supplier, and will be regarded as a control against which we will evaluate our in house fabricated cells. For the in house fabrication, we will be focusing on polymer:fullerne BHJ and perovskite active layer cells. We intend to investigate a variety of polymer:fullerene blends and develop a procedue for fabrication which yields the greatest PCE and MPP in the stratospheric environment, and to investigate the possibility of transpatent conductive oxide(TCO) layers besides the traditional indium tin oxide (ITO) glass and polyethylene terephthalate (PET) plastic. \cite{nextgen_TCO}
 
-Solar cells are characterized by their current vs voltage (IV) curve, which tells you the maximum power point ($MPP$), $V_{max}$ and $I_{max}$, open-circuit voltage ($V_{oc}$ and short circuit current ($I_{sc}$), leading to the fill factor ($FF$) and efficiency ($PCE$). This curve will be  generated using a variable resistor in series with two multimeters, one acting as voltmeter and the other an ammeter, and the solar cell in question, which will follow Ohm's Law. From the plot, $V_{oc}$ is seen when $I=0$, $I_{sc}$ is when $V = 0$, and the $MPP$ is where $V_{max}$ and $I_{max}$ meet. The $MPP$ can then tell us the efficiency ($Eff$), which is defined as
+Solar cells are characterized by their current vs voltage (IV) curve, which tells you the maximum power point ($MPP$), $V_{max}$ and $I_{max}$, open-circuit voltage ($V_{oc}$) and short circuit current ($I_{sc}$), leading to the fill factor ($FF$) and efficiency ($PCE$). This curve will be  generated using a variable resistor in series with two multimeters, one acting as voltmeter and the other an ammeter, and the solar cell in question, which will follow Ohm's Law. From the plot, $V_{oc}$ is seen when $I=0$, $I_{sc}$ is when $V = 0$, and the $MPP$ is where $V_{max}$ and $I_{max}$ meet. The $MPP$ can then tell us the efficiency ($\eta$), which is defined as
 \begin{equation}
-  Eff = \dfrac{MPP}{P_{in}}.
+  $\eta$ = \dfrac{MPP}{P_{in}}.
 \end{equation}
 The fill factor gives information on the "squareness" of the IV curve and is defined as
 \begin{equation}
