--- a/Bib.tex
+++ b/Bib.tex
@@ -77,6 +77,12 @@ Kuan Sun, Yijie Xia, and Jianyong Ouyang, Next-Generation transparent electrode 
 \bibitem{nanophase}
 Chen et al., Nanophase Seperation in Organic Solar Cells, (2015) Organic Solar Cells, New York: CRC press
 
+\bibitem{NREL}
+\url{https://www.nrel.gov/pv/organic-photovoltaic-solar-cells.html}
+
+\bibitem{perovskite}
+\url{https://www.nrel.gov/pv/perovskite-solar-cells.html}
+
 
 %\bibitem{uv_irradiance}
 %  Calculating the UV Index. (2016, October 14). Retrieved June 03, 2017, from \url{https://www.epa.gov/sunsafety/calculating-uv-index-0}.
