--- a/Radiation/DesignRad.tex
+++ b/Radiation/DesignRad.tex
@@ -82,7 +82,7 @@ We will be using four different types of solar cells with a total of 12 arrays o
 
 Solar cells are characterized by their current vs voltage (IV) curve, which tells you the maximum power point ($MPP$), $V_{max}$ and $I_{max}$, open-circuit voltage ($V_{oc}$) and short circuit current ($I_{sc}$), leading to the fill factor ($FF$) and efficiency ($PCE$). This curve will be  generated using a variable resistor in series with two multimeters, one acting as voltmeter and the other an ammeter, and the solar cell in question, which will follow Ohm's Law. From the plot, $V_{oc}$ is seen when $I=0$, $I_{sc}$ is when $V = 0$, and the $MPP$ is where $V_{max}$ and $I_{max}$ meet. The $MPP$ can then tell us the efficiency ($\eta$), which is defined as
 \begin{equation}
-  $\eta$ = \dfrac{MPP}{P_{in}}.
+  \eta = \dfrac{MPP}{P_{in}}.
 \end{equation}
 The fill factor gives information on the "squareness" of the IV curve and is defined as
 \begin{equation}
