--- a/Radiation/IntroRad.tex
+++ b/Radiation/IntroRad.tex
@@ -22,7 +22,7 @@ Photovoltaic devices have been a staple in space energy harvesting since the lau
 \subsubsection{Working principals}
 OSCs use earth abundant, carbon based semiconductors, such as conjugated polymers(as donors) and fullerene derivatives(as acceptors). Where as in mono-crystalline solar cells the valance and conduction bands are used to determine the energy band gap, OSCs model the difference between the highest occupied molecular orbit(HOMO) and the lowest unoccupied molecular orbit(LUMO) as equivalent to this energy band gap. When donor(D) and acceptor(A) layers meet, their Fermi levels match up and band bending occurs, which creates a small electric field, or built in potential (Vbi). Charge generation occurs when excitons, an electron/hole pair bound together by the Coulomb force, are generated in the donor material. This exciton will travel towards to D-A interface, where the aforementioned Vbi will seperate the exciton into free charges given sufficient conditions.  Exciton transportation inside of the bulk is hindered to 5-50nm before recombination occurs depending on material and structure, while the average thickness of an OSC is 50-100nm, thus the architecture of the active layer is of much importance. Instead of using a bi-layer of n-type and p-type semiconductors, OSCs use the bulk hetero-junction (BHJ), which is a blend with A-D regions that are within the estimated diffusion length. \cite{NREL}
 	
-A newer type of organic-inorganic blend solar cell which has gained a lot  attention is the perovskite solar cell (PSC). This solar cell has a novel active layer comprised of organometallic molecules which exhibit the perovskite crystal structure ABX3. The most commonly used perovskite material is methylamoniumm lead trihalide (CH3NH3PbX3, MAPX), where lead can be swapped for tin, and halides such as boron, iodine, and chlorine are employed. Fabrication of the perovskite solar cell is highly attractive as it can be accomplished with wet chemistry, roll to roll printing, or vapor deposition. Some key features of the perovskite structure is that the bandgap of the material is tunable via the halide content and that the diffusion length of holes and electrons is ~1 micron, making them perfect for roll to roll thin film printing. The Shockley–Queisser limit is about 31 percent under an AM1.5G solar spectrum at 1000W/m2, for a Perovskite bandgap of 1.55 eV, which is near the theoretical maximum of 33.7 percent, and reports of perovskite cells with PCE as high as 22 percent have already been fabricated. As a newer material there is still much unknown about the physics of the perovskite solar cell, such as if charges occur as bound excitons or free charges. \cite{perovskite}
+A newer type of organic-inorganic blend solar cell which has gained a lot  attention is the perovskite solar cell (PSC). This solar cell has a novel active layer comprised of organometallic molecules which exhibit the perovskite crystal structure ABX3. The most commonly used perovskite material is methylamoniumm lead trihalide (CH3NH3PbX3, MAPX), where lead can be swapped for tin, and halides such as boron, iodine, and chlorine are employed. Fabrication of the perovskite solar cell is highly attractive as it can be accomplished with wet chemistry, roll to roll printing, or vapor deposition. Some key features of the perovskite structure is that the bandgap of the material is tunable via the halide content and that the diffusion length of holes and electrons is ~1 micron, making them perfect for roll to roll thin film printing. The Shockley–Queisser limit is about 31 percent under an AM1.5G solar spectrum at 1000W/m2, for a Perovskite bandgap of 1.55 eV, which is near the theoretical maximum of 33.7 percent \cite{perovskite limit}, and reports of perovskite cells with PCE as high as 22 percent have already been fabricated \cite{perovskite max}. As a newer material there is still much unknown about the physics of the perovskite solar cell, such as if charges occur as bound excitons or free charges. \cite{perovskite}
 
 Space transport involves high doses of radiation, large fluctuations of temperatures, and extreme vacuum conditions. The need to study the effects of a space like environment on organic electronic devices is paramount as advances in the organic semiconductor field continue and space exploration becomes more standard. \cite{OSCAR} In this study, we propose to mount four different types of solar cells onto our payload and monitor their performance. We will be using prefabricated small molecule based OSCs, self fabricated polymer based OSCs, self fabricated PSCs, and prefabricated amorphous silicon solar cells. Each of these is a lightweight, flexible, and thin solar cell ideal for space use. Additionaly, effect to the crystal structure of the perovskite based cell is of particular interest, as cosmic ray bombardments and fluxtuations of temperature can be determental. 
 	
