Updated to contain our official response. Minor fixes still need to be made.

--- a/Application.tex
+++ b/Application.tex
@@ -94,7 +94,11 @@
 \input{Sections/Management.tex}
 
 \input{Sections/AppendixA.tex}
-	
+
+\input{Sections/AppendixB.tex}
+
+\newpage
+
 \input{Bib.tex}
 
 
