Finalized application response.

--- a/Sections/AppendixB.tex
+++ b/Sections/AppendixB.tex
@@ -4,11 +4,20 @@
 
 Appendix B constitutes the UH HASP team's official response to the feedback provided in the HASP 2019 Application review. We have addressed and answered all questions and concerns given on the application response. We have included several visuals that are up-to-date depictions of our current vision for the SORA 3 project.
 
-<<Input the disucssion regarding the connection between the three experiments here>>
+For this year’s mission, we are continuing our work with the MiniPIX and astrobiology, while adding on a new project to investigate the use of hybrid-organic thin film solar cells in space. All three of our experiments are connected through the electromagnetic spectrum, with the MiniPIX and solar cell projects having a direct correlation to each other through the analysis and actual use of incident radiation, and our astrobiological unit is interested in examining the microbial life forms which survive, even thrive, in this harsh radiation environment. 
+
+As for the astrobiology, by having a second MiniPIX mounted on the outside in free space, we are able to understand the radiation environment in which the samples that we collect exist. Part of the astrobiology mission for this year is to examine the DNA profiles of the samples collected, where we can make correlations between any mutations observed to the radiation events cataloged. 
+
+Regarding the solar cells, we will be recording current density versus voltage graphs for the entirety of the flight, where any observed anomalies will be cross-referenced with the recorded MiniPIX data to determine the effect that cosmic rays and high energy particles have on our cells. After the flight, using electron microscopy, we will evaluate any defects caused by said high energy particles. As well we will be observing the spectrum of light incident on our payload using photodiodes. 
+
+As to why we to added the organic solar cell unit into the mix; we want to continue doing research in semiconductor physics related to space. With nanophysics growing exponentially, organic semiconducting devices are a hot topic. We believe that organic and hybrid organic photovoltaic (HOPV) devices will play a critical role in the future of space energy harvesting, and the HASP platform provides a perfect environment to analyze these cells in situ. 
+
+Finally, we are adding a second MiniPIX onto our payload to be housed in a box replicating the radiation shielding used on the International Space Station in order to determine the radiation environment to which astronauts are exposed. By having both MiniPIX devices we can then determine exactly what kind of radiation was effectively shielded.
+
 
 \subsection{Payload Design}
 
-We have made slight modifications to our power and weight budget, as well as added the uncertainty in the values. These changes are reflected in Table \ref{tab:PWBudget-Updated}
+We have made slight modifications to our power and weight budget, as well as added the uncertainty in the values. These changes are reflected in Table \ref{tab:PWBudget-Updated}. The total current consumption listed on this table is an estimation for the maximum current draw possible from our payload. As it can be seen, our estimated current and weight consumption falls well within the specified limits established by HASP.
 
 Figure \ref{fig:PayloadDrawing-Updated} addresses the height violation presented in our original application.
 The extension of the astrobiology T-arm has been reduced so that the lid remains within the height limit of \SI{300}{\milli\meter}.
